[tool.poetry]
name = "username_bypass"
version = "1.0"
description = "Thi s a a tutorials on bypassing username to email"
authors = ["chiko liu"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
